Added coffi code